--- a/huebflix/src/app/header/header.component.html
+++ b/huebflix/src/app/header/header.component.html
@@ -1,1 +1,7 @@
-<img src="../../assets/huebi-logo_transparent_01.png" id="logo">
+<div class="grid-container">
+    <img src="../../assets/huebi-logo_transparent_01.png" id="logo">
+
+    <button>Projektübersicht</button>
+    <button>Projekte filtern</button>
+    <button>Über uns</button>
+</div>
