--- a/huebflix/src/app/footer/footer.component.html
+++ b/huebflix/src/app/footer/footer.component.html
@@ -1,6 +1,4 @@
-<div>
+<div id="main">
     <p>Huebflix by:</p>
     <p>Jonas Holm</p>
-    <p>jonas.holm@gmx.de</p>
-    <p>+49 152 58558511</p>
 </div>
