--- a/huebflix/src/app/header/header.component.html
+++ b/huebflix/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="grid-container">
     <img src="../../assets/huebi-logo_transparent_01.png" id="logo">
 
-    <button>Projektübersicht</button>
-    <button>Projekte filtern</button>
-    <button>Über uns</button>
+    <button class="btn btn-light">Projektübersicht</button>
+    <button class="btn btn-light">Suchen</button>
+    <button class="btn btn-light" routerLink="about">Über uns</button>
 </div>
