--- a/huebflix/src/app/header/header.component.scss
+++ b/huebflix/src/app/header/header.component.scss
@@ -1,8 +1,10 @@
 #logo{
-    width: 80px;
+    padding: 2%;
+    width: 90px;
 }
 
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto auto;
-  }
+    padding-bottom: 2%;
+}
