--- a/huebflix/src/app/footer/footer.component.scss
+++ b/huebflix/src/app/footer/footer.component.scss
@@ -1,8 +1,9 @@
 p{
     text-align: center;
-    line-height: 0.7;
 }
 
 #main {
     padding-top: 1%;
+    padding-bottom: 1%;
+    background-color: #dddddd;
 }
