--- a/huebflix/src/app/header/header.component.html
+++ b/huebflix/src/app/header/header.component.html
@@ -1,7 +1,17 @@
-<div class="grid-container">
-    <img src="../../assets/huebi-logo_transparent_01.png" id="logo">
-
-    <button class="btn btn-light">Projektübersicht</button>
-    <button class="btn btn-light">Suchen</button>
-    <button class="btn btn-light" routerLink="about">Über uns</button>
-</div>
+<ul class="grid-container">
+    <li>
+        <img src="../../assets/huebi-logo_transparent_01.png" id="logo" routerLink="">
+    </li>
+    <li>
+        <a routerLink="">Home</a>
+    </li>
+    <li>
+        <a>Projektübersicht</a>
+    </li>
+    <li>
+        <a routerLink="search">Suchen</a>
+    </li>
+    <li>
+        <a routerLink="about">About</a>
+    </li>
+</ul>
