--- a/huebflix/src/app/header/header.component.scss
+++ b/huebflix/src/app/header/header.component.scss
@@ -1,10 +1,22 @@
-#logo{
-    padding: 2%;
-    width: 90px;
-}
-
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    padding-bottom: 2%;
+    grid-template-columns: auto auto auto auto auto;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: #dddddd;
+}
+
+li {
+    display: inline;
+    padding: 8px;
+    margin: auto;
+}
+
+#logo{
+    padding: 2%;
+    width: 65px;
 }
